 16-Oct-2021  V1.696 Add validation and loading tests for computed models
 17-Oct-2021  V1.697 Standardize path details for computed models
 17-Oct-2021  V1.698 Change the path hierarchy for computed models
 16-Dec-2021  V1.699 Enforce pymongo version 3.12.0; latest release (4.0) results in self.__dbClient not being created successfully
 30-Mar-2022  V1.700 Add pdbx_comp_model_core database to CLI commands, and
                     Add support for loading id code lists for mongo PdbxLoader() (preliminary)
                     Exclude 'ma_' categories from being declared as mandatory
 20-Apr-2022  V1.701 Adding support for computed-model loading;
                     Updates to handle comp model local and global scores, as well as internal identifiers;
                     Add testRepoHoldingsRemoteDataPrep test case;
                     Enable use of cluster filename template configuration passed in by Luigi
 29-Jun-2022  V1.702 Remove unnecessary custom handling of computed-model identifiers (will now use the internally-modified entry.id)
 23-Dec-2022  V1.703 Configuration changes to support tox 4
 26-Jan-2023  V1.704 Update MA_DICT_LOCATOR path in exdb-config-example.yml and add uchar5 to DataTypeApplicationInfo.py
 30-Jan-2023  V1.705 Update requirements (pin SQLAlchemy)
 14-Feb-2023  V1.706 Updates to PdbxLoader and RepoLoadWorkflow to support resumability of core data loading tasks
 22-Feb-2023  V1.707 Updates to PdbxLoader to use case-sensitivity for brute force document purge
 06-Apr-2023  V1.708 Add support for entity_id_list cifType in DataTypeApplicationInfo
 26-Apr-2023  V1.709 Fix document pre-purge regex during load, and add regexPurge flag to control running that step
  8-May-2023  V1.710 Fix error handling in PdbxLoader to cause failure when documents fail to load
 19-May-2023  V1.711 Update DNS to PDB archive
 23-Sep-2023  V1.712 Add support for pdb_id_u cifType in DataTypeApplicationInfo