@@ -35,6 +35,7 @@
 #     22-Feb-2023 dwp  Use case-sensitivity for brute force document purge
 #     26-Apr-2023 dwp  Fix regex document purge, and add regexPurge flag to control running that step (with default set to skip it)
 #      8-May-2023 dwp  Fix error handling in PdbxLoader to cause failure when documents fail to load
+#      7-Nov-2023 dwp  Remove unused redundant PdbxLoaderWorker code (already present in PdbxLoader)
 #
 ##
 """
@@ -74,418 +75,6 @@ from rcsb.utils.multiproc.MultiProcUtil import MultiProcUtil
 logger = logging.getLogger(__name__)
 
 
-class PdbxLoaderWorker(object):
-    def __init__(self, cfgOb, repositoryProviderObj, dictionaryMethodRunnerObj, resourceName):
-        self.__verbose = False
-        self.__cfgOb = cfgOb
-        self.__rpP = repositoryProviderObj
-        self.__dmh = dictionaryMethodRunnerObj
-        self.__resourceName = resourceName
-
-    def loadWorker(self, dataList, procName, optionsD, workingDir):
-        """Multi-proc worker method for MongoDb loading -
-
-        successList, resultList, diagList=workerFunc(runList=nextList,procName, optionsD, workingDir)
-
-        locatorObjList -> containerList -> docList  ->|LOAD|<-  .... return success locatorObjList
-
-        """
-        try:
-            startTime = self.__begin(message=procName)
-            # Recover common options
-            styleType = optionsD["styleType"]
-            filterType = optionsD["filterType"]
-            readBackCheck = optionsD["readBackCheck"]
-            logSize = "logSize" in optionsD and optionsD["logSize"]
-            dataSelectors = optionsD["dataSelectors"]
-            loadType = optionsD["loadType"]
-            databaseName = optionsD["databaseName"]
-            pruneDocumentSize = optionsD["pruneDocumentSize"]
-            regexPurge = optionsD["regexPurge"]
-            sd = optionsD["schemaDefAccess"]
-            dtf = optionsD["dataTransformFactory"]
-            collectionNameList = optionsD["collectionNameList"]
-            useNameFlag = optionsD["useNameFlag"]
-            sdp = SchemaDefDataPrep(schemaDefAccessObj=sd, dtObj=dtf, workPath=workingDir, verbose=self.__verbose)
-            # -------------------------------------------
-            # -- Create map of  cIdD{ container identifier} =  locatorObj
-            #
-            collectionName = None
-            cIdD = {}
-            cNameL = []
-            containerList = []
-            for locatorObj in dataList:
-                # JDW
-                cL = self.__rpP.getContainerList([locatorObj])
-                if cL:
-                    cNameL.append(cL[0].getName().upper().strip())
-                    cId = cL[0].getName() if useNameFlag else cL[0].getProp("uid")
-                    cIdD[cId] = locatorObj
-                    containerList.extend(cL)
-            # -- Apply methods to each container -
-            for container in containerList:
-                if self.__dmh:
-                    self.__dmh.apply(container)
-                else:
-                    logger.debug("%s No dynamic method handler for ", procName)
-            # -----
-            # Perform force purge of existing documents based on regex. Also note that another deletion is performed by deleteList() below (via __loadDocuments)
-            # This is skipped if regexPurge == False (default), since other deletion step is more efficient (based on container identifiers)
-            # Note: might be able to even comment this entire block out, but leaving here temporariliy in case we discover a reason to keep it (DWP 04/2023)
-            if loadType != "full" and regexPurge:
-                for collectionName in collectionNameList:
-                    ok = self.__purgeDocuments(databaseName, collectionName, cNameL)
-                    logger.debug("%s %s - loadType %r cNameL %r (%r)", databaseName, collectionName, loadType, cNameL, ok)
-            # --
-            failContainerIdS = set()
-            rejectContainerIdS = set()
-            # -----
-            for collectionName in collectionNameList:
-                ok = True
-                # ---------------- - ---------------- - ---------------- - ---------------- - ---------------- -
-                docIdL = sd.getDocumentKeyAttributeNames(collectionName)
-                replaceIdL = sd.getDocumentReplaceAttributeNames(collectionName)
-                #
-                tableIdExcludeList = sd.getCollectionExcluded(collectionName)
-                tableIdIncludeList = sd.getCollectionSelected(collectionName)
-                sliceFilter = sd.getCollectionSliceFilter(collectionName)
-                sdp.setSchemaIdExcludeList(tableIdExcludeList)
-                sdp.setSchemaIdIncludeList(tableIdIncludeList)
-                #
-                logger.debug("%s databaseName %s collectionName %s slice filter %s", procName, databaseName, collectionName, sliceFilter)
-                logger.debug("%s databaseName %s include list %r", procName, databaseName, tableIdIncludeList)
-                logger.debug("%s databaseName %s exclude list %r", procName, databaseName, tableIdExcludeList)
-                #
-                dList, containerIdList, rejectIdList = sdp.processDocuments(
-                    containerList,
-                    styleType=styleType,
-                    filterType=filterType,
-                    dataSelectors=dataSelectors,
-                    sliceFilter=sliceFilter,
-                    useNameFlag=useNameFlag,
-                    collectionName=collectionName,
-                )
-                #
-                # ------
-                # Collect the container identifiers for the rejected containers (paths for logging only)
-                # Note that rejections are NOT treated as failures!
-                #
-                rejectPathList = []
-                for cId in rejectIdList:
-                    rejectContainerIdS.add(cId)
-                    locObj = cIdD[cId]
-                    rejectPathList.extend(self.__rpP.getLocatorPaths([locObj], locatorIndex=0))
-                rejectPathList = list(set(rejectPathList))
-                #
-                if logSize:
-                    self.__logDocumentSize(procName, dList, docIdL)
-
-                dList = sdp.addDocumentPrivateAttributes(dList, collectionName)
-                dList = sdp.addDocumentSubCategoryAggregates(dList, collectionName)
-                #
-                # --- And after adjustments create index
-                #     to map dList -> containerNamList  using dList(uniqId) -> containterName
-                #
-                indexDoc = {}
-                try:
-                    for dD, cId in zip(dList, containerIdList):
-                        dIdTup = self.__getKeyValues(dD, docIdL)
-                        indexDoc[dIdTup] = cId
-                except Exception as e:
-                    logger.exception("Failing cN %r  dD %r with %s", cId, dD, str(e))
-
-                #
-                if dList:
-                    ok, _, failDocIdS = self.__loadDocuments(
-                        databaseName, collectionName, dList, docIdL, replaceIdL=replaceIdL, loadType=loadType, readBackCheck=readBackCheck, pruneDocumentSize=pruneDocumentSize
-                    )
-                # ------
-                # Collect the container identifiers for the successful loads (paths for logging only)
-                #
-                failPathList = []
-                for dId in failDocIdS:
-                    cId = indexDoc[dId]
-                    failContainerIdS.add(cId)
-                    locObj = cIdD[cId]
-                    failPathList.extend(self.__rpP.getLocatorPaths([locObj], locatorIndex=0))
-                failPathList = list(set(failPathList))
-                #
-                if failPathList:
-                    logger.debug("%s %s/%s worker load failures %r", procName, databaseName, collectionName, [os.path.basename(pth) for pth in failPathList if pth is not None])
-                if rejectPathList:
-                    logger.debug("%s %s/%s worker load rejected %r", procName, databaseName, collectionName, [os.path.basename(pth) for pth in rejectPathList])
-            #
-            # -------------------------
-            #  failContainerIdS = set()
-            #  rejectContainerIdS = set()
-            #
-            #  cIdD[cId] = locatorObj
-            # ----
-            retList = [locatorObj for cId, locatorObj in cIdD.items() if cId not in failContainerIdS]
-            logger.debug("%s %s load worker returns  successes %d rejects %d failures %d", procName, databaseName, len(retList), len(rejectContainerIdS), len(failContainerIdS))
-
-            ok = len(failContainerIdS) == 0
-            self.__end(startTime, procName + " with status " + str(ok))
-            return retList, [], []
-
-        except Exception as e:
-            # logger.error("Failing for dataList %r" % dataList)
-            logger.exception("Failing with %s", str(e))
-
-        return [], [], []
-
-    # -------------- -------------- -------------- -------------- -------------- -------------- --------------
-    #                                        ---  Supporting code follows ---
-    #
-    def __logDocumentSize(self, procName, dList, docIdL):
-        maxDocumentMegaBytes = -1
-        thresholdMB = 15.8
-        # thresholdMB = 5.0
-        for tD in dList:
-            cN = self.__getKeyValues(tD, docIdL)
-            # documentMegaBytes = float(sys.getsizeof(pickle.dumps(tD, protocol=0))) / 1000000.0
-            documentMegaBytes = float(sys.getsizeof(bson.BSON.encode(tD))) / 1000000.0
-            logger.debug("%s Document %s %.4f MB", procName, cN, documentMegaBytes)
-            maxDocumentMegaBytes = max(maxDocumentMegaBytes, documentMegaBytes)
-            if documentMegaBytes > thresholdMB:
-                logger.info("Large document %r  %.4f MB", cN, documentMegaBytes)
-                for ky in tD:
-                    try:
-                        sMB = float(sys.getsizeof(bson.BSON.encode({"t": tD[ky]}))) / 1000000.0
-                    except Exception:
-                        sMB = -1
-                    logger.info("Sub-document length %s sizeMB %.4f  %8d", ky, sMB, len(tD[ky]))
-                #
-        logger.info("%s maximum document size loaded %.4f MB", procName, maxDocumentMegaBytes)
-        return True
-
-    def __purgeDocuments(self, databaseName, collectionName, cardinalIdL):
-        """Purge documents from collection within database with cardinal identifiers in cardinalIdL."""
-        try:
-            # Prepare terminating regex pattern based on database and collection for most efficient searching
-            regexEnd = "$"  # ensures pattern won't overmatch other entries (e.g., bird_chem_comp "PRD" won't match "PRD_000306")
-            if databaseName in ["pdbx_core", "pdbx_comp_model_core"] and "core_entry" not in collectionName:
-                regexEnd = "[_.-]"  # captures entities, instances, and assemblies
-            #
-            with Connection(cfgOb=self.__cfgOb, resourceName=self.__resourceName) as client:
-                mg = MongoDbUtil(client)
-                for cardId in cardinalIdL:
-                    # selectD = {"rcsb_id": "/%s/" % cardId} # this filter did not work
-                    selectD = {"rcsb_id": {"$regex": f"^{cardId.upper()}{regexEnd}"}}  # case-sensitive (avoid case-insensitive -- very slow performance)
-                    dCount = mg.delete(databaseName, collectionName, selectD)
-                    logger.debug("Remove %d objects in database %s collection %s selection %r", dCount, databaseName, collectionName, selectD)
-            return True
-        except Exception as e:
-            logger.exception("Failing with %s", str(e))
-        return False
-
-    #
-
-    def __writePathList(self, filePath, pathList):
-        try:
-            with open(filePath, "w", encoding="utf-8") as ofh:
-                for pth in pathList:
-                    ofh.write("%s\n" % pth)
-            return True
-        except Exception as e:
-            logger.exception("Failing with %s", str(e))
-        return False
-
-    def __begin(self, message=""):
-        startTime = time.time()
-        ts = time.strftime("%Y %m %d %H:%M:%S", time.localtime())
-        logger.debug("Starting %s at %s", message, ts)
-        return startTime
-
-    def __end(self, startTime, message=""):
-        endTime = time.time()
-        ts = time.strftime("%Y %m %d %H:%M:%S", time.localtime())
-        delta = endTime - startTime
-        logger.debug("Completed %s at %s (%.4f seconds)", message, ts, delta)
-
-    def __createCollection(self, databaseName, collectionName, indexDL=None, bsonSchema=None):
-        """Create database and collection and optionally a set of indices -"""
-        try:
-            logger.debug("Create database %s collection %s", databaseName, collectionName)
-            with Connection(cfgOb=self.__cfgOb, resourceName=self.__resourceName) as client:
-                mg = MongoDbUtil(client)
-                ok1 = mg.createCollection(databaseName, collectionName, bsonSchema=bsonSchema)
-                ok2 = mg.databaseExists(databaseName)
-                ok3 = mg.collectionExists(databaseName, collectionName)
-                okI = True
-                if indexDL:
-                    for indexD in indexDL:
-                        okI = mg.createIndex(databaseName, collectionName, indexD["ATTRIBUTE_NAMES"], indexName=indexD["INDEX_NAME"], indexType="DESCENDING", uniqueFlag=False)
-
-            return ok1 and ok2 and ok3 and okI
-            #
-        except Exception as e:
-            logger.exception("Failing with %s", str(e))
-        return False
-
-    def __removeCollection(self, databaseName, collectionName):
-        """Drop collection within database"""
-        try:
-            with Connection(cfgOb=self.__cfgOb, resourceName=self.__resourceName) as client:
-                mg = MongoDbUtil(client)
-                #
-                logger.debug("Remove collection database %s collection %s", databaseName, collectionName)
-                logger.debug("Starting databases = %r", mg.getDatabaseNames())
-                logger.debug("Starting collections = %r", mg.getCollectionNames(databaseName))
-                ok = mg.dropCollection(databaseName, collectionName)
-                logger.debug("Databases = %r", mg.getDatabaseNames())
-                logger.debug("Post drop collections = %r", mg.getCollectionNames(databaseName))
-                ok = mg.collectionExists(databaseName, collectionName)
-                logger.debug("Post drop collections = %r", mg.getCollectionNames(databaseName))
-            return ok
-        except Exception as e:
-            logger.exception("Failing with %s", str(e))
-        return False
-
-    def __pruneBySize(self, dList, limitMB=15.9):
-        """For the input list of objects (dictionaries).objects
-        Return a pruned list satisfying the input total object size limit -
-
-        """
-        oL = []
-        try:
-            for dD in dList:
-                sD = {}
-                sumMB = 0.0
-                for ky in dD:
-                    dMB = 0.0
-                    try:
-                        dMB = float(sys.getsizeof(bson.BSON.encode({ky: dD[ky]}))) / 1000000.0
-                    except Exception as e:
-                        logger.error("ky %r d[ky] %r with %s", ky, dD[ky], str(e))
-
-                    sumMB += dMB
-                    sD[ky] = dMB
-                if sumMB < limitMB:
-                    oL.append(dD)
-                    continue
-                #
-                sortedSd = sorted(sD.items(), key=operator.itemgetter(1))
-                prunedSum = 0.0
-                for ky, sMB in sortedSd:
-                    prunedSum += sMB
-                    if prunedSum > limitMB:
-                        dD.pop(ky, None)
-                        logger.debug("Pruning ky %s size(MB) %.2f", ky, sMB)
-                oL.append(dD)
-        except Exception as e:
-            logger.exception("Failing with %s", str(e))
-            #
-        logger.debug("Pruning returns document list length %d", len(dList))
-        return oL
-
-    def __loadDocuments(self, databaseName, collectionName, dList, docIdL, replaceIdL=None, loadType="full", readBackCheck=False, pruneDocumentSize=None):
-        #
-        # Load database/collection with input document list -
-        #
-        rIdL = []
-
-        logger.debug("databaseName %s collectionName %s docIdL %r", databaseName, collectionName, docIdL)
-        inputDocIdS = {self.__getKeyValues(dD, docIdL) for dD in dList}
-        failDocIdS = set()
-        successDocIdS = set()
-
-        try:
-            with Connection(cfgOb=self.__cfgOb, resourceName=self.__resourceName) as client:
-                mg = MongoDbUtil(client)
-                #
-                if loadType == "replace" and replaceIdL:
-                    deleteTupL = mg.deleteList(databaseName, collectionName, dList, replaceIdL)
-                    logger.debug("Deleted document status %r", deleteTupL)
-                if pruneDocumentSize:
-                    dList = self.__pruneBySize(dList, limitMB=pruneDocumentSize)
-                #
-                rIdL.extend(mg.insertList(databaseName, collectionName, dList, keyNames=docIdL, salvage=True))
-                # ---
-                #  If there is a failure then determine the specific successes and failures -
-                #
-                successDocIdS = inputDocIdS
-                if len(rIdL) != len(dList):
-                    sIdS = set()
-                    try:
-                        for rId in rIdL:
-                            rObj = mg.fetchOne(databaseName, collectionName, "_id", rId)
-                            dIdTup = self.__getKeyValues(rObj, docIdL)
-                            sIdS.add(dIdTup)
-                    except Exception as e:
-                        logger.exception("Failing with %s", str(e))
-                    successDocIdS = sIdS
-                # enumerate the failures
-                failDocIdS = inputDocIdS - successDocIdS
-                #
-                if readBackCheck:
-                    # build an index of the input document list
-                    indD = {}
-                    try:
-                        for ii, dD in enumerate(dList):
-                            dIdTup = self.__getKeyValues(dD, docIdL)
-                            indD[dIdTup] = ii
-                    except Exception as e:
-                        logger.exception("Failing ii %d d %r with %s", ii, dD, str(e))
-                    #
-                    # Note that objects in dList are mutated by the insert operation with the additional key '_id',
-                    # hence, it is possible to compare the fetched object with the input object.
-                    #
-                    rbStatus = True
-                    for ii, rId in enumerate(rIdL):
-                        rObj = mg.fetchOne(databaseName, collectionName, "_id", rId)
-                        dIdTup = self.__getKeyValues(rObj, docIdL)
-                        jj = indD[dIdTup]
-                        if rObj != dList[jj]:
-                            rbStatus = False
-                            break
-                #
-                if readBackCheck and not rbStatus:
-                    return False, successDocIdS, failDocIdS
-                #
-            return len(rIdL) == len(dList), successDocIdS, failDocIdS
-        except Exception as e:
-            logger.exception("Failing with %s", str(e))
-
-        return False, [], inputDocIdS
-
-    def __getKeyValues(self, dct, keyNames):
-        """Return the tuple of values of corresponding to the input dictionary key names expressed in dot notation.
-
-        Args:
-            dct (dict): source dictionary object (nested)
-            keyNames (list): list of dictionary keys in dot notatoin
-
-        Returns:
-            tuple: tuple of values corresponding to the input key names
-
-        """
-        rL = []
-        try:
-            for keyName in keyNames:
-                rL.append(self.__getKeyValue(dct, keyName))
-        except Exception as e:
-            logger.exception("Failing for key names %r with %s", keyNames, str(e))
-
-        return tuple(rL)
-
-    def __getKeyValue(self, dct, keyName):
-        """Return the value of the corresponding key expressed in dot notation in the input dictionary object (nested)."""
-        try:
-            kys = keyName.split(".")
-            for key in kys:
-                try:
-                    dct = dct[key]
-                except Exception:
-                    logger.warning("Missing document key %r in %r", key, list(dct.keys()))
-                    return None
-            return dct
-        except Exception as e:
-            logger.error("Failing for key %r with %s", keyName, str(e))
-
-        return None
-
-
 class PdbxLoader(object):
     def __init__(
         self,
@@ -512,7 +101,7 @@ class PdbxLoader(object):
             fileLimit (int, optional): maximum number of files to process (no limit = None)
             verbose (bool, optional): Description
             readBackCheck (bool, optional): read back and check each loaded object
-            maxStepLength (int, optional): limit multiprocessing steps
+            maxStepLength (int, optional): maximum subList size (defaults to 2000)
 
         """
         self.__verbose = verbose
@@ -712,10 +301,6 @@ class PdbxLoader(object):
             failList = []
             for ii, subList in enumerate(subLists):
                 logger.info("Starting outer subtask %d of %d length %d", ii + 1, len(subLists), len(subList))
-                #
-                # Note: Looks like John was eventually trying to move this to a separate multiproc worker class,
-                #       like how it's done for other pieces of code (e.g., see rcsb.utils.insilico3d.ModelReorganizer).
-                # pdbxLoaderWorker = PdbxLoaderWorker(self.__cfgOb, self.__rpP, self.__dmh, self.__resourceName)
                 #
                 mpu = MultiProcUtil(verbose=True)
                 mpu.setWorkingDir(self.__cachePath)
